[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "generic"
version = "1.1.3"
description = "Generic programming library for Python"
readme = "README.md"
requires-python = "<4.0,>=3.9"
keywords = [ "dispatch", "event", "generic", "multi dispatch",]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]
dependencies = [ 'exceptiongroup>=1.2.1; python_version < "3.11"',]
dynamic = []

[project.license]
file = "LICENSES/BSD-3-Clause.txt"

[[project.authors]]
name = "Andrey Popp"
email = "8mayday@gmail.com"

[[project.authors]]
name = "Arjan Molenaar"
email = "gaphor@gmail.com"

[[project.maintainers]]
name = "Arjan Molenaar"
email = "gaphor@gmail.com"

[[project.maintainers]]
name = "Dan Yeaw"
email = "dan@yeaw.me"

[project.urls]
homepage = "https://generic.readthedocs.io/"
repository = "https://github.com/gaphor/generic"
documentation = "https://generic.readthedocs.io/"

[project.optional-dependencies]
docs = [
    "furo<2025,>=2022",
    "sphinx<8.0,>=4.3",
]

[tool.pytest.ini_options]
testpaths = [ "tests", "docs",]
addopts = [ "--doctest-modules", "--doctest-glob='*.rst'", "--import-mode=importlib",]

[tool.coverage.run]
source = [ "generic",]

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
check_untyped_defs = true
strict_optional = true
show_error_codes = true
ignore_missing_imports = true
warn_unused_ignores = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [ "pytest.*", "conf",]
ignore_missing_imports = true
warn_unreachable = true

[tool.ruff]
exclude = [ ".venv", "dist",]
line-length = 88

[tool.ruff.lint]
ignore = ["E501",]
select = [
    "B",
    "B9",
    "C",
    "E",
    "F",
    "W",
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.uv]
dev-dependencies = [
    "pytest >=8.3,<9.0",
    "pytest-cov >=5.0,<6.0",
]
